# barcode-generator

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pytest.ini  validator_raw.py
src/: run_raw.py
src/controllers/: tag_creator_controller.py
src/drivers/: barcode_handler.py
src/main/routes/: tag_routes.py
src/views/: tag_creator_view.py
tests/: tag_creator_controller_test.py  tag_creator_validator_test.py
