[project]
name = "barcode-generator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tania de Arruda", email = "develop.tania@gmail.com"},
]
dependencies = [
    "pre-commit>=3.6.0",
    "pylint>=3.0.3",
    "Flask>=3.0.2",
    "python-barcode>=0.15.1",
    "pillow>=10.2.0",
    "Cerberus>=1.3.5",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
